# XCMAX

./: .cursorignore  .dockerignore  .env.example  .env.monitoring.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .venv-ARCHIVE_POINTER.md  AI_PLATFORM_9_SCORE_ROADMAP.md  ARCH-ENTERPRISE-MOD-EMPLOYEE.md  ARCHIVE_POINTER.md  CHANGELOG.md  Dockerfile  FIXES.md  Makefile  Makefile.win  README.md  SECURITY.md  VERSION.md  XCAGI-Architecture-Map.html  XCAGI-Five-Line.html  XCAGI-Full-Pipeline.html  collect_7day.sh  collect_7day_k8s.sh  deploy_k8s_staging.sh  docker-compose.dev.yml  docker-compose.yml  emp-wf-radial-graph.js  fix_k8s_staging_live.sh  litestream-dr.yml  litestream.yml  manage.bat  migrate-mods-2026-06-07.sh  mkdocs.yml  mypy-baseline.txt  package-release.bat  package-release.sh  package.json  pyproject.toml  requirements-base.txt  (+18 more)
FHD/: -  .env.example  .env.fhd-docker  .env.fhd-docker.example  .env.production.example  .flake8  .gitignore  .tmp_debug_conv.py  .tmp_debug_conv2.py  .tmp_debug_conv3.py  .venv  1",  CHANGELOG.md  COMMERCIAL_LICENSE.md  Dockerfile  LICENSE  README.md  SECURITY.md  VERSION.md  _analyze_coverage.py  _find_zero.py  coverage-stable.json  docker-compose.dev.yml  docker-compose.release.yml  docker-compose.yml  git-change-inventory-summary.md  gunicorn_config.py  mobile_relay_desktop.json  package-release.bat  package-release.sh  package.json  pyproject.toml  pytest.ini  requirements-ml.txt  requirements.txt  run.py  setup.iss  start-desktop-sqlite.bat  test_modstore_adapter.py  wechat_decrypt_runtime.json
FHD/.codex-artifacts/: window-ai-circle-entry.xml  window-ai-circle.xml  window-discover-no-workbench.xml  window-explore.xml  window-profile-no-workbench.xml  window-profile.xml  window-settings.xml  window-workbench.xml  window.xml
FHD/AMIN/: _types.ts  env.d.ts  tsconfig.json
FHD/MODstore/: .gitignore  README.md  deploy.bat  pyproject.toml  start-modstore.bat
FHD/XCAGI/: .env.cursor.local.example  .env.enterprise-desktop  .env.enterprise-desktop.example  .env.example  .env.local-market  .env.local-market.example  .env.online-market  .env.online-market.example  .env.smtp.local.example  .gitignore  API_DOCS.md  BUSINESS_MODEL.md  CHANGELOG.md  CODE_EDITOR_SKILLS_IMPLEMENTATION.md  CORE_CAPABILITIES_REPORT.md  Dockerfile  ERROR_HANDLING_GUIDE.md  FRONTEND.md  LICENSE  MOD_STORE_GUIDE.md  OPERATIONS_MANUAL.md  PACKAGING_GUIDE.md  PROJECT_ASSESSMENT_V6.md  QUICK_REFERENCE.md  README.md  REFACTORING_GUIDE.md  REFACTORING_README.md  SECURITY.md  VERSION.md  alembic.ini  direct_test_contract.py  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.release.yml  docker-compose.yml  generate_api_docs.py  gunicorn_config.py  package-lock.json  package-release.bat  package-release.sh  (+23 more)
FHD/_recovered-jun4-frontend/: README.md
FHD/_restored-from-transcript-jun4/: XCmaxAdminView.vue
FHD/admin-console/: README.md  index.html  package.json  tsconfig.json  vite.config.js
FHD/alembic/: env.py
FHD/app/: __init__.py  bootstrap.py  config.py  errors.py  extensions.py  request_tenant_ctx.py  traditional_mode_fs.py
FHD/baselines/: latest.json  latest.md
FHD/codex_super_employee/: messages.jsonl
FHD/config/: ai_workforce.json  customer_delivery.json  download_release.json  duty_roster.json  host_profile.schema.json  industry_baseline.json  industry_mod_aliases.json  industry_presets.json  meeting_minutes_levels.json  mobile_app.yaml  mobile_design_tokens.json  models.yaml  neuro_bus_events.yaml  product.yaml  release_train.json  release_train.json.bak-20260606150147  saas_plans.json  service_topology.yaml  six_line_employee_map.json  six_line_event_routes.json  ssot.yaml  surface_audit_demo_account.json  surface_audit_pages.json  topology.generated.json  workspaces.json  xcmax_path_employee_map.json
FHD/contracts/: openapi.json
FHD/dataset_rag/: datasets.json
FHD/deploy/: patch-nginx-fhd-api-to-5100.py  requirements-dev.txt  requirements-server-api.lock.txt  requirements-server-api.txt
FHD/desktop/: electron-builder.yml  main.js  main.ts  package-lock.json  package.json  preload.ts  updater.ts
FHD/docker/: Dockerfile.fhd-api  Dockerfile.mod-sandbox  MOD_SANDBOX.md  build-mod-sandbox.sh  docker-compose.fhd-full.yml  docker-compose.fhd-prod.yml  mod-sandbox.dockerignore
FHD/docs/: ARCHITECTURE.md  CLAIMED_VS_ACTUAL.md  DELIVERABLE_PRODUCT.md  DEPLOYMENT.md  DOCUMENTATION_MAP.md  FEATURE_MAP.md  FRONTEND_PORT_MIGRATION.md  I18N_ROLLOUT.md  M0-remaining-gaps.md  MIGRATION_v2_DROP_PLAN.md  MOD_EXTENSION_LOADER_DESIGN.md  MYPY_BATCH_STATUS.md  PERFORMANCE_ARCHITECTURE_PHASE4.md  PERFORMANCE_LOAD_TESTING.md  PERF_BASELINE_ROADMAP.md  PROJECT_STATE.md  QUICK_START.md  SCHEMA_DIALECT_NOTES.md  SLO.md  SQL_RAW_INVENTORY.md  SSOT_FRAMEWORK.md  SSOT_INDEX.md  START_HERE.md  TECH_STACK.md  V10_REMAINING_DEBT.md  V10_ROADMAP_COMPLETE.md  account_system_ssot.md  ai-agent-v1-plan.md  aiopen.md  copy-style-zh.md  delivery-checklist.md  employee_drift_matrix.csv  mobile_tri_platform_ssot.md  vue_html_module_mapping.md
FHD/evals/: __init__.py  agent_tasks.jsonl  run_agent_eval.py  run_market_wallet_cross_process_eval.py
FHD/frontend/: .env.development.example  .env.development.local.example  README.md  README.txt  _analyze_coverage.py  adminConsole.vite.config.js  check_cov.py  check_xcmax.cjs  error-handler.ts  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  stryker.conf.json  sunbirdConsole.vite.config.js  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.shared-alias.js  vitest.config.js  vitest.setup.js  vitest.setup.ts
FHD/gitops/: README.md  app-of-apps.yaml
FHD/k8s/: celery-worker-deployment.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml
FHD/metrics/: coverage-baseline-2026-06-01.json  coverage-dual-summary.json  coverage-history.jsonl  coverage_ratchet_baseline.json  deploy_events.seed.jsonl  dora-20260613.json  sla-snapshot.json  (+1 more)
MODstore/: README.md  pyproject.toml
(+10187 files in other folders)
