[project]
name = "modstore"
version = "0.2.0"
description = "MODstore：XCAGI Mod 库、制作、调试沙箱与同步"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
web = [
  "fastapi>=0.109",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.6",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "PyJWT>=2.8",
  "passlib[bcrypt]>=1.7",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.3",
  "isort>=5.13",
]

[project.scripts]
modman = "modman.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modman*", "modstore*", "modstore_server*"]

[tool.setuptools.package-data]
modman = ["data/*.json"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["modman", "modstore_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["modman", "modstore_server"]
branch = true
omit = ["*/tests/*"]
